objects/tdc_cti__CTI_Logs__c/tdc_cti__CTI_Logs__c.object-meta.xml
<CustomObject>
    <label>CTI Logs</label>
    <nameField>
        <label>CTI Logs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CTI Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>