objects/tdc_cti__CTI_Logs__c/fields/tdc_cti__Description__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Description__c</fullName>
    <description>This field is used to store some other details related to the exception.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>