objects/tdc_cti__CTI_Logs__c/fields/tdc_cti__Exception_Message__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Exception_Message__c</fullName>
    <description>This field is used to store the exception message.</description>
    <label>Exception Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>