objects/tdc_cti__CTI_Logs__c/fields/tdc_cti__Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Exception_Type__c</fullName>
    <description>This field is used to store the type of exception.</description>
    <label>Exception Type</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>