objects/tdc_cti__CTI_Logs__c/fields/tdc_cti__Method_Name__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Method_Name__c</fullName>
    <description>This field is used to store the name of the method from which exception occurs.</description>
    <label>Method Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>