objects/tdc_cti__CTI_Logs__c/listViews/CTI_Incoming_Call_Queue_CTI_Logs.listView-meta.xml
<ListView>
    <fullName>CTI_Incoming_Call_Queue_CTI_Logs</fullName>
    <filterScope>Queue</filterScope>
    <label>CTI Incoming Call Queue</label>
    <queue>CTI_Incoming_Call_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>